crates/dao/tests/compile_fail/passthrough_with_annotation.stderr
error: DAO method has both an annotation and a body.
       Annotations auto-generate the body — remove the annotation to use a pass-through body, or remove the body to let the annotation generate it.
  --> tests/compile_fail/passthrough_with_annotation.rs:14:5
   |
14 | /     #[query("SELECT id FROM widgets WHERE id = ?")]
15 | |     async fn get(&self, id: i64) -> Result<Option<Widget>> {
...  |
19 | |             .await
20 | |     }
   | |_____^

warning: unused imports: `Pool`, `Result`, and `async_trait`
 --> tests/compile_fail/passthrough_with_annotation.rs:4:11
  |
4 | use dao::{async_trait, dao, Entity, Pool, Result};
  |           ^^^^^^^^^^^               ^^^^  ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
